--- a/thank_you.html
+++ b/thank_you.html
@@ -60,66 +60,16 @@
         </div>
     </div>
     <!-- Page Header End -->
-
-
-    <!-- Contact Start -->
-    <div class="container-fluid bg-secondary px-0">
-        <div class="row g-0 madhu-change">
-            <div class="col-lg-6 py-6 px-5">
-                <h1 class="display-5 mb-4">Contact For Any Queries</h1>
-                <form action="https://formsubmit.co/dmadhusudhan98@gmail.com" method="POST">
-                    <div class="row g-3">
-                        <div class="col-6">
-                            <div class="form-floating">
-                                <input class="form-control" id="form-floating-1" placeholder="Name" type="text" name="name" required>
-                                <label for="form-floating-1">Full Name</label>
-                            </div>
-                        </div>
-                        <div class="col-6">
-                            <div class="form-floating">
-                                <input class="form-control" id="form-floating-2" placeholder="Email" type="email" name="email" required>
-                                <label for="form-floating-2">Email address</label>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="form-floating">
-                                <input class="form-control" placeholder="Message" id="form-floating-4" style="height: 150px" type="text" name="message" required>
-                                <label for="form-floating-4">Message</label>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <input type="hidden" name="_next" value="https://client-project-pearl.vercel.app/thank_you.html" >
-                            <button class="btn btn-primary w-100 py-3" type="submit">Submit</button>
-                        </div>
-                    </div>
-                </form>
-            </div>
-            <!-- <div class="col-lg-6" style="min-height: 400px;">
-                <div class="position-relative h-100">
-                    <iframe class="position-relative w-100 h-100"
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001156.4288297426!2d-78.01371936852176!3d42.72876761954724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc4bf0f123a5a9%3A0xddcfc6c1de189567!2sNew%20York%2C%20USA!5e0!3m2!1sen!2sbd!4v1603794290143!5m2!1sen!2sbd"
-                        frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-                </div>
-            </div> -->
-        </div>
+    <div style="    
+        margin: 172px 0px 160px 0px;
+        display: flex;
+        justify-content: center;">
+        <h1 style="font-size: 4rem">Thank You</h1>
     </div>
-    <!-- Contact End -->
+
 
 
     <!-- Footer Start -->
-    <div class="container-fluid bg-primary text-secondary p-5">
-        <div class="row g-5">
-            <div class="col-12 text-center">
-                <h1 class="display-5 mb-4">Stay Update!!!</h1>
-                <form class="mx-auto" style="max-width: 600px;">
-                    <div class="input-group">
-                        <input type="text" class="form-control border-white p-3" placeholder="Your Email">
-                        <button class="btn btn-dark px-4">Sign Up</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
     <div class="container-fluid bg-dark text-secondary p-5">
         <div class="row g-5">
             <div class="col-lg-3 col-md-6">
