--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,7 @@
                         </div>
                         <div class="col-6">
                             <div class="form-floating">
-                                <input class="form-control" id="form-floating-2" placeholder="Email" type="text" name="name" required>
+                                <input class="form-control" id="form-floating-2" placeholder="Email" type="email" name="email" required>
                                 <label for="form-floating-2">Email address</label>
                             </div>
                         </div>
