--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
                         </div>
                         <div class="col-12">
                             <div class="form-floating">
-                                <input class="form-control" placeholder="Message" id="form-floating-4" style="height: 150px" type="text" name="name" required>
+                                <input class="form-control" placeholder="Message" id="form-floating-4" style="height: 150px" type="text" name="message" required>
                                 <label for="form-floating-4">Message</label>
                             </div>
                         </div>
