--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Tech Swapna</title>
+    <title>Tech Swapn</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -34,7 +34,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm px-5 py-3 py-lg-0">
         <a href="index.html" class="navbar-brand p-0">
-            <h1 class="m-0 text-uppercase text-primary"><i class="far fa-smile text-primary me-2"></i>Tech Swapna</h1>
+            <h1 class=" fw-light text-uppercase text-primary">Tech  <span class="fw-semibold">Swapn</span></h1>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -97,7 +97,7 @@
     <div class="container-fluid bg-secondary p-0">
         <div class="row g-0">
             <div class="col-lg-6 py-6 px-5">
-                <h1 class="display-5 mb-4">Welcome To <span class="text-primary">Tech Swapna</span></h1>
+                <h1 class="display-5 mb-4">Welcome To <span class="text-primary">Tech Swapn</span></h1>
                 <h4 class="text-primary mb-4">the process is much more than just advise.</h4>
                 <p class="mb-4">While offering technology consulting Services our ultimate goal remains to help you decide on 
                     and implement the best suitable IT pratice that actually align with your business goal. on stones unturned 
@@ -114,7 +114,7 @@
                         </div>
                         <div class="ps-4">
                             <h3>Business Planning</h3>
-                            <p class="mb-0">Tech Swapna servies improve business process because of finesssing all the stages involed through the elimination of everything that is operationally in complete the process.</p>
+                            <p class="mb-0">Tech Swapn servies improve business process because of finesssing all the stages involed through the elimination of everything that is operationally in complete the process.</p>
                         </div>
                     </div>
                     <div class="d-flex text-white mb-5">
@@ -155,7 +155,7 @@
                         <i class="fa fa-user-tie fa-2x"></i>
                     </div>
                     <h3 class="mb-3">Business Research</h3>
-                    <p class="mb-0">Tech Swapna servies improve business process because of finesssing all the stages involed through the elimination of everything that is operationally in complete the process</p>
+                    <p class="mb-0">Tech Swapn servies improve business process because of finesssing all the stages involed through the elimination of everything that is operationally in complete the process</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
